<resources>
    <string name="app_name">AndroStorm</string>
    <string name="city">Miasto:</string>
    <string name="storm_p">Prawdopodobieństwo burzy:</string>
    <string name="rain_p">Prawdopodobieństwo deszczu:</string>
    <string name="storm_t">Czas do burzy:</string>
    <string name="rain_t">Czas do opadu:</string>
    <string name="city_noWarnings">Brak ostrzeżeń dla miasta</string>
    <string name="probability">Prawdopodobieństwo:</string>
    <string name="refresh">Odśwież</string>
    <string name="error">Błąd</string>
    <string name="settings">Ustawienia</string>
    <string name="pref_refreshOnStartup_title">Automatyczne pobranie danyc</string>
    <string name="pref_refreshOnStartup_summary">Automatycznie pobierz dane pogodowe przy stacie aplikacji</string>
</resources>
