<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="maciej.androstorm.WeatherActivity">

    <TextView
        android:text="@string/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_city"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:text="@string/rain_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rain_p"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tv_storm_t"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:text="@string/storm_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_storm_p"
        android:layout_below="@+id/tv_city"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:text="@string/rain_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_rain_p"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_rain_t"
        android:textStyle="bold" />

    <TextView
        android:text="@string/storm_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_storm_t"
        android:layout_below="@+id/tv_storm_p"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_city_v"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tv_city"
        android:layout_toEndOf="@+id/tv_city" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_storm_t_v"
        android:layout_alignBaseline="@+id/tv_storm_t"
        android:layout_alignBottom="@+id/tv_storm_t"
        android:layout_toRightOf="@+id/tv_storm_t"
        android:layout_toEndOf="@+id/tv_storm_t"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_rain_p_v"
        android:layout_alignBaseline="@+id/tv_rain_p"
        android:layout_alignBottom="@+id/tv_rain_p"
        android:layout_toRightOf="@+id/tv_rain_p"
        android:layout_toEndOf="@+id/tv_rain_p" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rain_t_v"
        android:layout_alignBaseline="@+id/tv_rain_t"
        android:layout_alignBottom="@+id/tv_rain_t"
        android:layout_toRightOf="@+id/tv_rain_t"
        android:layout_toEndOf="@+id/tv_rain_t"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_storm_p_v"
        android:layout_alignBaseline="@+id/tv_storm_p"
        android:layout_alignBottom="@+id/tv_storm_p"
        android:layout_toRightOf="@+id/tv_storm_p"
        android:layout_toEndOf="@+id/tv_storm_p"
        android:layout_marginLeft="10dp" />

</RelativeLayout>
