<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Miasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_city"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/city_noWarnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_waring"
        android:layout_below="@+id/fli_city"
        android:layout_alignLeft="@+id/fli_city"
        android:layout_alignStart="@+id/fli_city" />

    <TextView
        android:text="@string/rain_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_rain_t"
        android:layout_below="@+id/fli_waring"
        android:layout_alignLeft="@+id/fli_waring"
        android:layout_alignStart="@+id/fli_waring" />

    <TextView
        android:text="@string/storm_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_storm_t"
        android:layout_below="@+id/fli_rain_t"
        android:layout_alignLeft="@+id/fli_rain_t"
        android:layout_alignStart="@+id/fli_rain_t" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_rain_t_v"
        android:layout_below="@+id/fli_waring"
        android:layout_toRightOf="@+id/fli_rain_t"
        android:layout_toEndOf="@+id/fli_rain_t"
        android:textStyle="bold"
        android:layout_marginLeft="3dp" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_storm_t_v"
        android:layout_below="@+id/fli_rain_t"
        android:layout_toRightOf="@+id/fli_storm_t"
        android:layout_toEndOf="@+id/fli_storm_t"
        android:layout_marginLeft="3dp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/probability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fli_rain_p"
        android:layout_toEndOf="@+id/fli_storm_t_v"
        android:id="@+id/fli_storm_p"
        android:layout_toRightOf="@+id/fli_storm_t_v"
        android:layout_marginLeft="11dp" />

    <TextView
        android:text="@string/probability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_rain_p"
        android:layout_below="@+id/fli_waring"
        android:layout_toRightOf="@+id/fli_rain_t_v"
        android:layout_toEndOf="@+id/fli_rain_t_v"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_rain_p_v"
        android:layout_alignBaseline="@+id/fli_rain_p"
        android:layout_alignBottom="@+id/fli_rain_p"
        android:layout_toRightOf="@+id/fli_rain_p"
        android:layout_toEndOf="@+id/fli_rain_p"
        android:layout_marginLeft="3dp"
        android:textStyle="bold" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fli_storm_p_v"
        android:layout_below="@+id/fli_rain_p"
        android:layout_toRightOf="@+id/fli_storm_p"
        android:layout_toEndOf="@+id/fli_storm_p"
        android:layout_marginLeft="3dp"
        android:textStyle="bold" />

</RelativeLayout>